GOBE-68 Challenge Feature 1.1.3 Fix profile, add Multiple language, and enhance UX

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,8 +1,34 @@
 {
-  "welcome": "Welcome",
-  "login": "Login",
-  "logout": "Logout",
-  "home": "Home",
-  "profile": "Profile",
-  "settings": "Settings"
+  "profileUpdated": "Profile updated successfully!",
+  "updateFailed": "Failed to update profile.",
+  "removed": "Removed",
+  "move": "Move",
+  "undo": "Undo",
+  "changePicture": "Change Picture",
+  "uploadHint": "Click to upload or drag and drop",
+  "uploadSubHint": "SVG, PNG, JPG, or GIF (MAX. 800x400px)",
+  "email": "Email",
+  "username": "Username",
+  "generalInformation": "General Information",
+  "fullName": "Full Name",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "dateOfBirth": "Date of Birth",
+  "gender": "Gender",
+  "chooseGender": "Choose Gender",
+  "male": "Male",
+  "female": "Female",
+  "other": "Other",
+  "phone": "Phone",
+  "province": "Province/City",
+  "selectProvince": "Select Province",
+  "district": "District",
+  "selectDistrict": "Select District",
+  "ward": "Ward",
+  "selectWard": "Select Ward",
+  "yourInterest": "Your Interest",
+  "addInterest": "Add Interest",
+  "updating": "Updating...",
+  "updateProfile": "Update Profile",
+  "selectChallengeType": "Select Challenge Type"
 }
