--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1,8 +1,34 @@
 {
-  "welcome": "Chào mừng",
-  "login": "Đăng nhập",
-  "logout": "Đăng xuất",
-  "home": "Trang chủ",
-  "profile": "Hồ sơ",
-  "settings": "Cài đặt"
+  "profileUpdated": "Cập nhật hồ sơ thành công!",
+  "updateFailed": "Cập nhật hồ sơ thất bại.",
+  "removed": "Đã loại bỏ",
+  "move": "Bỏ",
+  "undo": "Hoàn tác",
+  "changePicture": "Thay đổi ảnh",
+  "uploadHint": "Nhấn để tải lên hoặc kéo thả vào đây",
+  "uploadSubHint": "Chỉ chấp nhận SVG, PNG, JPG hoặc GIF (KÍCH THƯỚC TỐI ĐA 800x400px)",
+  "email": "Email",
+  "username": "Tên người dùng",
+  "generalInformation": "Thông tin chung",
+  "fullName": "Họ và tên",
+  "firstName": "Tên",
+  "lastName": "Họ",
+  "dateOfBirth": "Ngày sinh",
+  "gender": "Giới tính",
+  "chooseGender": "Chọn giới tính",
+  "male": "Nam",
+  "female": "Nữ",
+  "other": "Khác",
+  "phone": "Số điện thoại",
+  "province": "Tỉnh/Thành phố",
+  "selectProvince": "Chọn Tỉnh/Thành phố",
+  "district": "Quận/Huyện",
+  "selectDistrict": "Chọn Quận/Huyện",
+  "ward": "Xã/Phường",
+  "selectWard": "Chọn Xã/Phường",
+  "yourInterest": "Sở thích của bạn",
+  "addInterest": "Thêm sở thích",
+  "updating": "Đang cập nhật...",
+  "updateProfile": "Cập nhật hồ sơ",
+  "selectChallengeType": "Chọn kiểu thử thách"
 }
