GOBE-73 Overall performance 1.0.1 Fixing router, protected Router, better UX

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,13 @@
 {
+  "menu": {
+    "about": "About",
+    "guide": "Guide",
+    "challenges": "Challenges",
+    "leaderboard": "Leaderboard",
+    "news": "News",
+    "logout": "Logout"
+  },
+
   "profileUpdated": "Profile updated successfully!",
   "updateFailed": "Failed to update profile.",
   "removed": "Removed",
