--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -1,4 +1,13 @@
 {
+  "menu": {
+    "about": "私たちについて",
+    "guide": "ガイド",
+    "challenges": "チャレンジ",
+    "leaderboard": "ランキング",
+    "news": "ニュース",
+    "logout": "ログアウト"
+  },
+
   "profileUpdated": "プロフィールが正常に更新されました！",
   "updateFailed": "プロフィールの更新に失敗しました。",
   "removed": "削除されました",
