--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -70,6 +70,25 @@
     "everyone": "Mọi người đều có thể mời",
     "noOne": "Không ai có thể mời",
     "sameGroup": "Chỉ thành viên cùng nhóm mới được mời"
+  },
+
+  "groupForm": {
+    "title": "Thông tin nhóm",
+    "groupName": "Tên nhóm",
+    "groupNamePlaceholder": "Nhập tên nhóm",
+    "privacy": "Quyền riêng tư",
+    "public": "Công khai",
+    "private": "Riêng tư",
+    "description": "Mô tả",
+    "descriptionPlaceholder": "Mô tả về nhóm",
+    "uploadHint": "Nhấn để tải ảnh hoặc kéo thả",
+    "uploadSubHint": "SVG, PNG, JPG hoặc GIF (TỐI ĐA 800x400px)",
+    "changePicture": "Thay đổi hình ảnh",
+    "creating": "Đang tạo...",
+    "createButton": "Tạo nhóm",
+    "cancelButton": "Hủy",
+    "createSuccess": "Tạo nhóm thành công!",
+    "createFailed": "Tạo nhóm thất bại!"
   }
 
 }
