GOBE-73 Overall performance 1.0.3 Apply theme and optimized UX/UI

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -92,6 +92,22 @@
     "cancelButton": "Cancel",
     "createSuccess": "Group created successfully!",
     "createFailed": "Failed to create group!"
+  },
+
+  "groupInvite": {
+    "title": "Invite to Group",
+    "searchPlaceholder": "Search by name or email...",
+    "search": "Search",
+    "close": "Close",
+    "invite": "Invite",
+    "previous": "Previous",
+    "next": "Next",
+    "page": "Page",
+    "selectAtLeastOne": "Please select at least one member.",
+    "inviteSuccess": "Invitation sent successfully!",
+    "inviteFailed": "Failed to send invitation.",
+    "searchFailed": "Failed to search members.",
+    "enterKeyword": "Please enter a keyword."
   }
 
 }
