--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -108,6 +108,43 @@
     "inviteFailed": "招待の送信に失敗しました。",
     "searchFailed": "検索に失敗しました。",
     "enterKeyword": "キーワードを入力してください。"
+  },
+
+  "createChallenge": {
+    "verificationType": {
+      "label": "認証方法",
+      "memberReview": "ピアレビュー",
+      "hostReview": "ホストによるレビュー"
+    },
+    "participationType": {
+      "label": "参加形式",
+      "individual": "個人",
+      "group": "グループ"
+    },
+    "generalInfo": "チャレンジの基本情報",
+    "name": "チャレンジ名",
+    "namePlaceholder": "短くて覚えやすい名前を入力してください",
+    "summary": "概要（任意）",
+    "summaryPlaceholder": "短い説明を追加しましょう。例：忘れられないチャレンジ",
+    "banner": "バナー画像（任意）",
+    "picture": "画像をアップロード",
+    "clickUpload": "クリックしてアップロードまたはドラッグ＆ドロップ",
+    "pictureNote": "SVG、PNG、JPG、またはGIF（最大800x400px）",
+    "changePicture": "画像を変更",
+    "details": "チャレンジの詳細",
+    "startDate": "開始日",
+    "endDate": "終了日",
+    "privacy": "プライバシー",
+    "challengeType": "チャレンジタイプ",
+    "selectChallengeType": "チャレンジタイプを選択",
+    "maxParticipants": "最大参加人数",
+    "description": "詳細説明",
+    "create": "作成",
+    "creating": "作成中...",
+    "cancel": "キャンセル",
+    "loading": "チャレンジを作成中...",
+    "success": "チャレンジが正常に作成されました！",
+    "fail": "チャレンジ作成に失敗しました: "
   }
 
 }
