--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -146,7 +146,17 @@
     "success": "Challenge created successfully!",
     "fail": "Failed to create challenge: "
   },
+
   "JoinsChallengeDetail": {
+    "disabledDuringChallenge": "This action is disabled during or after the challenge.",
+    "notJoined": "You have not joined this challenge.",
+    "loading": "Loading...",
+    "error": "Failed to load challenge details.",
+    "leaveSuccess": "You have left the challenge.",
+    "leaveFail": "Failed to leave the challenge.",
+    "reportSuccess": "Report submitted successfully.",
+    "reportFail": "Failed to submit report.",
+    "loadingProof": "Loading proof data...",
     "proof": "Proof",
     "member": "Members",
     "review": "Review",
@@ -156,9 +166,18 @@
     "share": "Share",
     "report": "Report",
     "title": "Challenge",
-    "notJoined": "You are not a participant of this challenge.",
-    "loading": "Loading...",
-    "error": "Error loading challenge detail",
-    "loadingProof": "Loading proof data..."
+    "reportTitle": "Report Challenge",
+    "reportType": "Type of report",
+    "type": {
+      "inappropriate": "Inappropriate content",
+      "spam": "Spam",
+      "harassment": "Offensive behavior",
+      "rule": "Rule violation",
+      "other": "Other"
+    },
+    "reason": "Reason",
+    "submit": "Submit Report",
+    "cancel": "Cancel"
   }
+
 }
