GOBE-68 Challenge Feature 1.1.4 UI/UX for challenge Host (Edit)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -111,44 +111,46 @@
   },
 
   "createChallenge": {
+    "editTitle": "Edit Challenge",
+    "successUpdate": "Challenge updated successfully!",
+    "updating": "Updating...",
+    "update": "Update",
+    "generalInfo": "General Information",
+    "details": "Challenge Details",
+    "name": "Challenge Name",
+    "namePlaceholder": "Enter challenge name",
+    "summary": "Summary",
+    "summaryPlaceholder": "Brief summary of the challenge",
+    "banner": "Banner (optional)",
+    "picture": "Challenge Image",
+    "pictureNote": "Accepted formats: JPG, PNG. Max size 2MB.",
+    "clickUpload": "Click or drag file to upload",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "privacy": "Privacy",
     "verificationType": {
       "label": "Verification Type",
-      "memberReview": "Peer to Peer",
-      "hostReview": "Host Review"
+      "hostReview": "Host Review",
+      "memberReview": "Member Review"
     },
     "participationType": {
       "label": "Participation Type",
       "individual": "Individual",
       "group": "Group"
     },
-    "generalInfo": "Challenge's General Information",
-    "name": "Challenge Name",
-    "namePlaceholder": "Give it a short distinct name",
-    "summary": "Summary (Optional)",
-    "summaryPlaceholder": "Add a short summary, e.g. An unforgettable challenge",
-    "banner": "Banner (Optional)",
-    "picture": "Add a picture",
-    "clickUpload": "Click to upload or drag and drop",
-    "pictureNote": "SVG, PNG, JPG, or GIF (MAX. 800x400px)",
-    "changePicture": "Change Picture",
-    "details": "Challenge Details",
-    "startDate": "Start Date",
-    "endDate": "End Date",
-    "privacy": "Privacy",
     "challengeType": "Challenge Type",
     "selectChallengeType": "Select challenge type",
-    "maxParticipants": "Max Participants",
-    "description": "Description",
-    "create": "Create",
-    "creating": "Creating...",
+    "maxParticipants": "Maximum Participants",
+    "description": "Challenge Description",
     "cancel": "Cancel",
-    "loading": "Creating challenge...",
-    "success": "Challenge created successfully!",
-    "fail": "Failed to create challenge: "
+    "validationError": "Please correct all errors before submitting.",
+    "fail": "Failed to update challenge: "
   },
 
   "JoinsChallengeDetail": {
     "disabledDuringChallenge": "This action is disabled during or after the challenge.",
+    "hostCannotLeave": "Host cannot leave the challenge.",
+    "hostCannotReport": "Host cannot report their own challenge.",
     "notJoined": "You have not joined this challenge.",
     "loading": "Loading...",
     "error": "Failed to load challenge details.",
