--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -108,43 +108,46 @@
   },
 
   "createChallenge": {
+    "editTitle": "Chỉnh sửa thử thách",
+    "successUpdate": "Cập nhật thử thách thành công!",
+    "updating": "Đang cập nhật...",
+    "update": "Cập nhật",
+    "generalInfo": "Thông tin chung",
+    "details": "Chi tiết thử thách",
+    "name": "Tên thử thách",
+    "namePlaceholder": "Nhập tên thử thách",
+    "summary": "Tóm tắt",
+    "summaryPlaceholder": "Mô tả ngắn về thử thách",
+    "banner": "Ảnh banner (không bắt buộc)",
+    "picture": "Ảnh minh họa thử thách",
+    "pictureNote": "Định dạng chấp nhận: JPG, PNG. Tối đa 2MB.",
+    "clickUpload": "Nhấn hoặc kéo thả tệp để tải lên",
+    "startDate": "Ngày bắt đầu",
+    "endDate": "Ngày kết thúc",
+    "privacy": "Chế độ riêng tư",
     "verificationType": {
-      "label": "Hình thức xác minh",
-      "memberReview": "Thành viên chấm chéo",
-      "hostReview": "Host kiểm duyệt"
+      "label": "Phương thức xác minh",
+      "hostReview": "Chủ thử thách xác minh",
+      "memberReview": "Thành viên xác minh"
     },
     "participationType": {
       "label": "Hình thức tham gia",
       "individual": "Cá nhân",
       "group": "Nhóm"
     },
-    "generalInfo": "Thông tin chung của thử thách",
-    "name": "Tên thử thách",
-    "namePlaceholder": "Nhập tên ngắn gọn và dễ nhớ",
-    "summary": "Tóm tắt (Không bắt buộc)",
-    "summaryPlaceholder": "Thêm một vài dòng truyền cảm hứng, ví dụ: Thử thách không thể nào quên",
-    "banner": "Ảnh bìa (Không bắt buộc)",
-    "picture": "Tải ảnh minh họa",
-    "clickUpload": "Bấm để tải lên hoặc kéo thả",
-    "pictureNote": "Định dạng SVG, PNG, JPG hoặc GIF (TỐI ĐA 800x400px)",
-    "changePicture": "Đổi ảnh",
-    "details": "Chi tiết thử thách",
-    "startDate": "Ngày bắt đầu",
-    "endDate": "Ngày kết thúc",
-    "privacy": "Quyền riêng tư",
     "challengeType": "Loại thử thách",
     "selectChallengeType": "Chọn loại thử thách",
     "maxParticipants": "Số người tham gia tối đa",
-    "description": "Mô tả chi tiết",
-    "create": "Tạo mới",
-    "creating": "Đang tạo...",
+    "description": "Mô tả thử thách",
     "cancel": "Hủy",
-    "loading": "Đang tạo thử thách...",
-    "success": "Tạo thử thách thành công!",
-    "fail": "Tạo thử thách thất bại: "
+    "validationError": "Vui lòng điền đầy đủ và chính xác các trường bắt buộc.",
+    "fail": "Cập nhật thử thách thất bại: "
   },
+
   "JoinsChallengeDetail": {
     "disabledDuringChallenge": "Hành động này bị tắt khi thử thách đã diễn ra hoặc kết thúc.",
+    "hostCannotLeave": "Quản lí thử thách không thể rời thử thách",
+    "hostCannotReport": "Host không thể báo cáo thử thách của chính mình.",
     "notJoined": "Bạn chưa tham gia thử thách này.",
     "loading": "Đang tải...",
     "error": "Không thể tải chi tiết thử thách.",
