GOBE-68 Challenge feature 1.1.5 (Challenge detail)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -197,6 +197,9 @@
     "fail": "Failed to update challenge: "
   },
   "notification": {
+    "challengeStatusUpdated.title" : "Your challenge status have been updated",
+    "challengeStatusUpdated.content" : "|{{challengeName}}| has been updated to active",
+
     "challengeResult.title": "Challenge Result: Completed",
     "challengeResult.content": "You have successfully completed the challenge '{{challengeName}}'! Check out your achievement now!",
 
